--- a/src/styles/ItemButton.module.css
+++ b/src/styles/ItemButton.module.css
@@ -1,1 +1,13 @@
-.button { width:100%; height:100px; font-size:1rem; border:none; color:white; background:#333; display:flex; justify-content:center; align-items:center;}
+.button {
+  width: 100%;
+  height: 100%;
+  font-size: 0.75rem;
+  padding: 0.25rem;
+  border: none;
+  color: white;
+  background: #333;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
